Hyperlink added to webpage

--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-   <p align = center><b>Tourist Places in USA</b></p>
+   <p align = center ><b>Tourist Places in USA</b></p>
     <div class="container">
   <table class="table">
     <thead class="table table-dark">
@@ -43,17 +43,21 @@
     <div>
         <h3>1. Statue of Liberty</h3>
         <p>A universal symbol of freedom, the Statue of Liberty is America's most familiar icon and the largest statue in the world. Standing 152 ft in New York Harbor, visitors can admire the statue from various points around the city, particularly Battery Park, or take a ferry right to the statue. For people who plan to go out to the statue, options include grounds tickets, pedestal tickets, or crown tickets, which allow different levels of access to the site. Anyone who plans on going inside the Statue of Liberty is encouraged to make advanced ticket reservations.</p>
+        <a href="https://en.wikipedia.org/wiki/Statue_of_Liberty"> Know more</a>
     </div>
     <div>
         <h3>2.Walt Disney World</h3>
         <p>This mega amusement park in Orlando is the top family attraction in the country, and has been catering to both young and old for decades. Opened in 1971, Walt Disney World has managed to maintain its relevance and its allure for children and even many adults throughout the years. Walt Disney World Resort encompasses not only the various theme parks, it also includes water parks, Downtown Disney with shopping and theaters, and much more, from fine dining to golf. Although many visitors plan to spend a few days here, it's possible to spend a week or longer if people want to take in all there is to see and do.</p>
+        <a href="https://en.wikipedia.org/wiki/Walt_Disney_World">Know more</a>
     </div>
     <div>
         <h3>3.Golden Gate Bridge</h3>
         <p>Arching across San Francisco Bay, joining San Francisco and Marin County, the Golden Gate Bridge has been a California icon since it was built in the 1930s. Contrasting with the blue water, the bridge's orangish-red color is an aesthetic accent that brings a unique quality to the city. It also has a unique presence when it is shrouded in fog with just the peaks of the main towers projecting through the low lying cloud. The bridge is approximately 2 miles long and part of Hwy 101 or SR 1.</p>
+        <a href="https://en.wikipedia.org/wiki/Golden_Gate_Bridge">Know more</a>
     </div>
     <div>
         <h3>4.Waikiki Beach</h3>
         <p>Home to the most popular beach in the Hawaiian Islands and possibly the most famous beach in the Pacific, Waikiki has been a tourist destination for over a century. Today this area is a cross between tropical paradise and modern city. Relaxing on this beautiful stretch of beach with palm trees blowing in the wind will certainly let you know you are in the tropics, but the high rise buildings and busy street in behind are a reminder that you are not far from civilization. Shopping, dining, surfing, and sunbathing are all part of what makes this small section of Oahu so popular with tourists of all ages from all parts of the world.</p>
+        <a href="https://en.wikipedia.org/wiki/Waikiki">Know more</a>
     </div>
 {% endblock %}
